feat: add lifetime supercharger counts
