# docs/swagger.json
@@ -4358,6 +4358,10 @@
                     "type": "string",
                     "example": "2020-01-05T19:30:00+01:00"
                 },
+                "free_supercharging_count": {
+                    "type": "integer",
+                    "example": 5
+                },
                 "free_supercharging_kwh": {
                     "type": "number",
                     "example": 125
@@ -4413,6 +4417,14 @@
                 "shortest_session_duration_min": {
                     "type": "integer",
                     "example": 12
+                },
+                "supercharger_count": {
+                    "type": "integer",
+                    "example": 73
+                },
+                "tesla_supercharger_count": {
+                    "type": "integer",
+                    "example": 68
                 },
                 "total_cost": {
                     "type": "number",
